# specious2000

./: .gitignore  CMakeLists.txt  README.md
CPU2000/175.vpr/: CMakeLists.txt
CPU2000/300.twolf/: CMakeLists.txt
config/: suite_all.txt  suite_cfp.txt  suite_cint.txt  suite_current.txt  suite_twolf.txt
utils/invocations/ref/: 175.vpr.ref.cmd
